[package]
name = "aivenapp-conversion-webhooks"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["tracing", "http2", "macros"] }
axum-otel-metrics = "0.12.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
k8s-openapi = { version = "0.26.0", features = ["v1_34"] }
kube = { version = "2.0.1", features = ["rustls-tls"] }
rustls = { version = "0.23.35", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
